--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,9 +2,10 @@
 
 /* You can add global styles to this file, and also import other style files */
 
-@import '@spartan-ng/brain/hlm-tailwind-preset.css';
-@layer ng-icon, theme, base, components, utilities;
+@layer ng-icon;
 @import 'tailwindcss';
+
+@import '@spartan-ng/brain/hlm-tailwind-preset.css';
 
 :root {
 	--background: 0 0% 100%;
