feat: add new dialog components

--- a/src/styles.css
+++ b/src/styles.css
@@ -56,3 +56,19 @@
 		@apply border-border;
 	}
 }
+
+@theme {
+	--animate-scan-line: scanning 1.5s linear infinite;
+}
+
+@keyframes scanning {
+	0% {
+		top: 0%;
+	}
+	50% {
+		top: 100%;
+	}
+	100% {
+		top: 0%;
+	}
+}
